tests/type/infered_int_type.rz
var a = 1
a = "foo" // error: trying to assign value of type 'str' to variable of type 'int'